<resources>
	<string name="app_name">Xmp Mod Player</string>
	<string name="app_description">A modplayer that plays over 90 mainstream and obscure module formats, including Protracker (MOD), Scream Tracker 3 (S3M), Fast Tracker II (XM) and Impulse Tracker (IT).</string>
    <string name="changelog_text">• Fix IT invalid instrument recovery\n• Fix IT note retrig on portamento\n• Fix XM volume on note delay\n• Fix XM out-of-range note delays\n• Fix XM envelope loop length\n• Fix option to show filename in playlist\n
\nVersion 4.3.0:\n• Fix IT filter envelope limits\n• Fix IT portamento after keyoff\n• Fix XM K00 effect handling\n• Fix XM note limits\n• Fix XM note off with volume command\n• Fix XM keyoff with instrument\n• Fix XM pattern loop start\n• Fix XM portamento target reset\n• Fix XM portamento with offset\n• Fix MOD note range enforcing\n• Fix MOD sample offset handling\n
\nVersion 4.2.0:\n• Code cleanup and refactoring\n• Fix OpenSL deadlock on buffer drain\n• Fix row delay on replay start\n• Fix buffer overrun on track change\n• Fix audio focus handling\n• Fix player activity launch mode\n• Fix skip to previous with invalid module\n• Fix crash with invalid XM instrument\n• Fix crash when releasing corrupt module\n
\nVersion 4.1.1:\n• Fix exception in Android 2.3\n• Fix memory violation in XM replay\n• Fix memory leaks in ABK loader\n• Fix Soundtracker 2.6 speed effect\n• Native code refactor and optimization\n
\nVersion 4.1.0:\n• Add Mod Archive search and download\n• Fix seek bar on player reconnect\n• Fix JNI crash on audio close\n• Fix crash on corrupt playlist entries\n• Fix crash on bluetooth receiver unregister\n• Fix crash on phone state change\n• Fix STM empty note event reading\n• Fix list position in file browser\n• Code cleanup and optimization\n
\nVersion 4.0.1:\n• Many stability fixes\n• Autopause on bluetooth disconnection\n• Smart back button in file browser\n• Launch in player screen if already playing\n
    </string>
    <string name="changelog_title">New in version 4.3.1</string>
    <string name="changelog">Changelog</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="dismiss">Dismiss</string>
    <string name="error">Error</string>
    <string name="directory">Directory</string>
    <string name="create">Create</string>
	<string name="pref_examples_title">Install modules</string>
    <string name="pref_examples_summary">Install example music files when creating modules directory</string>
    <string name="pref_sampling_rate_summary">Set the mixer sampling rate</string>
    <string name="pref_sampling_rate_title">Sampling rate</string>
    <string name="pref_list_formats_title">Known formats</string>
    <string name="pref_list_formats_summary">List all supported module formats</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary">View version and application info</string>
	<string name="pref_media_path_title">Modules pathname</string>
	<string name="pref_media_path_summary">The directory where mod files are located</string>
	<string name="pref_vol_boost_title">Volume boost</string>
	<string name="pref_vol_boost_summary">Set output volume amplification factor</string>
	<string name="pref_playlist_mode_title">Playlist click behavior</string>
    <string name="pref_playlist_mode_summary">Choose default action when clicking on playlist item</string>
	<string name="pref_pan_separation_title">Stereo separation</string>
    <string name="pref_pan_separation_summary">Set the mixer stereo separation</string>
    <string name="pref_default_pan_title">Default pan separation</string>
    <string name="pref_default_pan_summary">Set the default pan separation</string>
    <string name="pref_interpolate_summary">Interpolate samples</string>
    <string name="pref_interpolate_title">Interpolation</string>
    <string name="pref_interp_type_summary">Set sample interpolation method</string>
    <string name="pref_interp_type_title">Interpolation type</string>
    <string name="pref_headset_pause_summary">Automatically pause replay when headset is disconnected</string>
    <string name="pref_headset_pause_title">Pause on headset unplug</string>
    <string name="pref_bluetooth_pause_summary">Automatically pause replay when bluetooth is disconnected</string>
    <string name="pref_bluetooth_pause_title">Pause on bluetooth disconnection</string>
    <string name="pref_all_sequences_summary">Play all existing patterns/subsongs</string>
    <string name="pref_all_sequences_title">Hidden patterns</string>
    <string name="pref_back_button_navigation_summary">Back button returns to parent directory</string>
    <string name="pref_back_button_navigation_title">Back button navigation</string>
    <string name="pref_start_on_player_summary">If a module is playing, launch in the player screen</string>
    <string name="pref_start_on_player_title">Launch in player screen</string>
    <string name="pref_modarchive_folder_summary">Download to TheModArchive subfolder</string>
    <string name="pref_modarchive_folder_title">TheModArchive folder</string>
    <string name="pref_artist_folder_summary">Organize downloads by artist</string>
    <string name="pref_artist_folder_title">Artist folders</string>
    <string name="pref_buffer_ms_summary">Sound buffer duration</string>
    <string name="pref_buffer_ms_title">Buffer size</string>
    <string name="pref_buffer_ms_dialog">Set the size of sound buffer in milliseconds:</string>
    <string name="pref_clear_cache_summary">Clear module information cache</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_show_toast_title">Display toasts</string>
    <string name="pref_show_toast_summary">Enable interface help messages</string>
    <string name="pref_show_info_line_title">Replay status</string>
    <string name="pref_show_info_line_summary">Show replay information and time</string>
    <string name="pref_keep_screen_on_summary">Prevent screen from sleeping during replay</string>
    <string name="pref_keep_screen_on_title">Keep screen on</string>
    <string name="pref_use_filename_title">File names in playlist</string>
    <string name="pref_use_filename_summary">Display file names instead of titles in playlists</string>
    <string name="pref_enable_delete_title">Enable file delete</string>
    <string name="pref_enable_delete_summary">Display a menu option to delete the currently playing file</string>
    <string name="pref_category_sound">Sound settings</string>
    <string name="pref_category_files">Playlist settings</string>
    <string name="pref_category_player_control">Player control</string>
    <string name="pref_category_information">Information</string>
    <string name="pref_category_interface">Interface settings</string>
    <string name="pref_category_modarchive">Download settings</string>
    <string name="pref_category_download">Download location</string>
    <string name="pref_category_experimental">Experimental (be careful)</string>
    <string name="pref_category_preferences">Preferences</string>
    <string name="preferences_pan_separation_dialog">Set the mixer stereo separation:</string>
    <string name="preferences_default_pan_dialog">Set the default pan separation:</string>
    <string name="menu_refresh">Rescan</string>
    <string name="menu_prefs">Settings</string>
    <string name="menu_download">Download</string>
    <string name="menu_new_playlist">New playlist</string>
    <string name="menu_delete">Delete</string>
    <string name="dialog_new_comment">Comment</string>
    <string name="no_comment">No comment</string>
    <string name="dialog_new_playlist">New playlist name</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="empty_comment">Long press modules to create new playlists or add to existing playlists. Long press playlists for more options.</string>
    <string name="unrecognized_format">Unrecognized file format</string>
    <string name="about_author">Written by Claudio Matsuoka</string>
    <string name="about_version">Version %s</string>
    <string name="about_xmp">Using libxmp %s written by Claudio Matsuoka and Hipolito Carraro Jr.</string>
    <string name="error_datadir">Can\'t create data directory. Please check your storage card and try again.</string>
    <string name="error_create_playlist">Can\'t create playlist.</string>
    <string name="error_rename_playlist">Can\'t rename playlist.</string>
    <string name="error_edit_comment">Can\'t edit comment.</string>
    <string name="error_exist_dir">Directory does not exist.</string>
    <string name="error_write_to_playlist">Can\'t write to this playlist.</string>
    <string name="error_read_comment">Can\'t read comment.</string>
    <string name="error_storage">Can\'t access external storage.</string>
    <string name="error_adding_mod">Error adding module</string>
    <string name="error_dir_not_under_moddir">Directory not under mod dir</string>
    <string name="error_no_files_to_play">No files to play</string>
    <string name="error_audiofocus">Audio focus request failed</string>
    <string name="error_opensl">Can\'t open audio device</string>
    <string name="cache_clear">File cache cleared</string>
    <string name="cache_clear_error">Error clearing cache</string>
    <string name="msg_file_deleted">File deleted</string>
    <string name="msg_cant_delete">Can\'t delete file</string>
    <string name="msg_dir_deleted">Directory deleted</string>
    <string name="msg_cant_delete_dir">Can\'t delete directory</string>
    <string name="msg_select_playlist">Select playlist</string>
    <string name="msg_no_modules">No modules found.</string>
    <string name="msg_empty_playlist">Empty playlist.</string>
    <string name="msg_no_playlists">No playlists found.</string>
    <string name="msg_shuffle_on">Shuffle on</string>
    <string name="msg_shuffle_off">Shuffle off</string>
    <string name="msg_loop_on">Loop on</string>
    <string name="msg_loop_off">Loop off</string>
    <string name="msg_only_valid_files_sent">Only valid files were sent to player</string>
    <string name="msg_only_valid_files_added">Only valid files were added to playlist</string>
    <string name="button_parent_dir">Parent directory</string>
    <string name="button_play_all">Play all</string>
    <string name="button_toggle_loop">Toggle loop</string>
    <string name="button_toggle_shuffle">Toggle shuffle</string>
    <string name="button_mod_loop">Module loop</string>
    <string name="button_prev">Previous pattern</string>
    <string name="button_play_pause">Play or pause</string>
    <string name="button_stop">Stop</string>
    <string name="button_next">Next pattern</string>
    <string name="browser_filelist_title">File browser</string>
    <string name="browser_playlist_title">Playlist</string>
    <string name="sidebar_details">Module details</string>
    <string name="sidebar_patterns">Patterns:</string>
    <string name="sidebar_instruments">Instruments:</string>
    <string name="sidebar_samples">Samples:</string>
    <string name="sidebar_channels">Channels:</string>
    <string name="sidebar_subsongs">Subsongs</string>
    <string name="sidebar_button_allseqs">Play all subsongs</string>
    <string name="sidebar_button_loopseq">Loop subsong</string>
    <string name="search_title">Module search</string>
    <string name="search_result_title">Search result</string>
    <string name="search_artist_modules_title">Modules by artist</string>
    <string name="search_artist_title">Artist search</string>
    <string name="search_random_title">Random module</string>
    <string name="search_title_title">Title search</string>
    <string name="search_no_result">Search returned no results.</string>
</resources>