<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xmp="http://schemas.android.com/apk/res-auto"
    style="@style/SidebarTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/SidebarSectionTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sidebar_details" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmp:columnCount="2" >

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_patterns" />

        <TextView
            android:id="@+id/sidebar_num_pat"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmp:layout_gravity="right" />

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_instruments" />

        <TextView
            android:id="@+id/sidebar_num_ins"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmp:layout_gravity="right" />

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_samples" />

        <TextView
            android:id="@+id/sidebar_num_smp"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmp:layout_gravity="right" />

        <TextView
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_channels" />

        <TextView
            android:id="@+id/sidebar_num_chn"
            style="@style/SidebarDetailsTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmp:layout_gravity="right" />
    </android.support.v7.widget.GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        style="@style/SidebarSectionTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/SidebarSectionTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sidebar_subsongs" />

        <ImageButton
            android:id="@+id/sidebar_allseqs_button"
            style="@style/SidebarSectionTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sidebar_button_allseqs"
            android:src="@drawable/sub_off" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/sidebar_sequences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </RadioGroup>
    </ScrollView>

</LinearLayout>