<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:gravity="top"
	android:layout_weight="1.0"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:id="@+id/status_area"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/StatusTheme">

		<TextView android:id="@+id/current_path"
			android:layout_weight="1.0"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="12dp"
			android:layout_marginLeft="2dp"
			android:longClickable="true"
			android:focusable="true"
			android:textSize="16sp"
			android:textStyle="bold" />

		<ImageButton android:id="@+id/up_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginRight="2dp"
			android:layout_marginLeft="2dp"
			android:contentDescription="@string/button_parent_dir"
			android:background="@android:color/transparent"
			android:src="@drawable/parent" />

	</LinearLayout>

	<LinearLayout android:gravity="top"
		android:layout_weight="1.0"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="0dp">
		
		<ListView android:id="@+id/modlist_listview"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:fastScrollEnabled="true"
			android:drawSelectorOnTop="false" />

		<TextView android:id="@id/android:empty"
			android:gravity="top"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="No modules found." />
	</LinearLayout>

	<LinearLayout android:gravity="bottom"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageButton android:id="@+id/play_all"
			android:layout_weight="0.34"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/ButtonTheme"
			android:contentDescription="@string/button_play_all" />
		<ImageButton android:id="@+id/toggle_loop"
			android:layout_weight="0.33"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/ButtonTheme"
			android:contentDescription="@string/button_toggle_loop" />
		<ImageButton android:id="@+id/toggle_shuffle"
			android:layout_weight="0.33"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/ButtonTheme"
			android:contentDescription="@string/button_toggle_shuffle" />
	</LinearLayout>

</LinearLayout>
